--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,13 @@
         "**/bower_components": true,
         "**/build": true
     },
+
     "typescript.referencesCodeLens.enabled": true,
     "tslint.ignoreDefinitionFiles": false,
     "tslint.autoFixOnSave": true,
-    "tslint.exclude": "**/node_modules/**/*" 
+    "tslint.exclude": "**/node_modules/**/*",
+
+    "files.associations": {
+        "docker*": "dockerfile"
+    }
 }
