--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,17 @@
-config
+.vscode
+tsconfig.json
+tslint.json
+
 node_modules
 src
-test
-tools/publish.sh
-tools/README.md
-CONTRIBUTING.md
+
+.dockerignore
+Dockerfile
 docker-compose.yml
 docker-compose.override.yml
-Dockerfile
+
+.gitattributes
+.gitignore
 LICENSE.txt
 README.md
+CONTRIBUTING.md
