--- a/docker-dev.yml
+++ b/docker-dev.yml
@@ -12,7 +12,10 @@ services:
       - NODE_DEBUG=true
     ports:
       - "9229:9229" # V8 inspector (when NODE_DEBUG=true)
-    command: node --inspect=172.18.0.3:9229 build/index.js
+    command: node --inspect=172.28.0.3:9229 build/index.js
+    networks:
+      service_net:
+        ipv4_address: 172.28.0.3
 
   # SQL database
   db:
@@ -20,3 +23,14 @@ services:
     read_only: true
     environment:
       - POSTGRES_USER=postgres
+    networks:
+      service_net:
+        ipv4_address: 172.28.0.2
+
+networks:
+
+  service_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16  
