--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "inlineSourceMap": true,
+        "inlineSources": true,
         "outDir": "build",
         "baseUrl": ".",
         "paths": {
