--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Debug",
+            "name": "Attach to Docker Node",
             "address": "172.28.0.3",
             "port": 9229,
             "protocol": "inspector",
@@ -13,7 +13,7 @@
             "localRoot": "${workspaceRoot}",
             "remoteRoot": "/usr/src/app",
             "outFiles": [
-                "${workspaceRoot}/build/**/*.js"
+                "${workspaceRoot}/dist/**/*.js"
             ]
         }
     ]
