--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
-        "**/build": true
+        "**/dist": true
     },
 
-    "typescript.referencesCodeLens.enabled": true,
+    "typescript.tsc.autoDetect": "off",
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.referencesCodeLens.enabled": false,
     "tslint.ignoreDefinitionFiles": false,
     "tslint.autoFixOnSave": true,
     "tslint.exclude": "**/node_modules/**/*",
