--- a/docker-dev.yml
+++ b/docker-dev.yml
@@ -12,7 +12,7 @@ services:
       - NODE_DEBUG=true
     ports:
       - "9229:9229" # V8 inspector (when NODE_DEBUG=true)
-    command: node --inspect=172.28.0.3:9229 build/index.js
+    command: node --inspect=172.28.0.3:9229 dist/server/index.js
     networks:
       service_net:
         ipv4_address: 172.28.0.3
