--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "talks_api",
   "version": "1.0.0",
   "description": "Chat API",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "node_modules/.bin/tsc --p tsconfig.json",
-    "watch": "node_modules/.bin/tsc --p tsconfig.json -w",
-    "db:version": "node tools/db.js version",
-    "db:migrate": "node tools/db.js migrate",
-    "db:migrate:undo": "node tools/db.js migrate:undo",
-    "db:migration": "node tools/db.js migration",
-    "db:seed": "node tools/db.js seed",
-    "docker:dev:up": "docker-compose -f docker-common.yml -f docker-dev.yml up",
-    "start": "node tools/run.js"
+    "gulp": "gulp --gulpfile build/gulp/gulpfile.js --cwd ./",
+    "build:app": "node_modules/.bin/tsc --p tsconfig.json",
+    "watch:app": "node_modules/.bin/tsc --p tsconfig.json -w",
+    "build:tools": "node_modules/.bin/tsc --p build/tsconfig.json",
+    "watch:tools": "node_modules/.bin/tsc --p build/tsconfig.json -w",
+    "docker:dev:up": "docker-compose -f docker-common.yml -f docker-dev.yml up"
   },
   "repository": {
     "type": "git",
@@ -28,17 +25,29 @@
     "url": "https://github.com/earogov/talks_api/issues"
   },
   "homepage": "https://github.com/earogov/talks_api#readme",
+  "engines": {
+    "node": ">=8.1.2"    
+  },
   "dependencies": {
-    "@types/knex": "^0.0.54",
-    "@types/pg": "^6.1.41",
     "express": "^4.15.3",
     "knex": "^0.13.0",
     "pg": "^6.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.36",
-    "chokidar": "^1.7.0",
+    "@types/gulp": "^4.0.4",
+    "@types/gulp-if": "^0.0.31",
+    "@types/knex": "^0.0.56",
+    "@types/pg": "^6.1.42",
+    "@types/yargs": "^8.0.1",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-if": "^2.0.2",
+    "gulp-print": "^2.0.1",
+    "gulp-rimraf": "^0.2.1",
+    "gulp-typescript": "^3.2.0",
+    "gulp-util": "^3.0.8",
     "tslint": "^5.4.3",
-    "typescript": "^2.3.4"
+    "typescript": "^2.3.4",
+    "yargs": "^8.0.2"
   }
 }
