--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,17 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
-        "noImplicitAny": true,
         "moduleResolution": "node",
         "inlineSourceMap": true,
         "inlineSources": true,
-        "outDir": "build",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "removeComments": false,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "noEmitOnError": true,
+        "outDir": "dist",
         "baseUrl": ".",
         "paths": {
             "*": [
